# coalpit

./: .travis.yml  ChangeLog.md  Coalpit.hs  Example.hs  LICENSE  README.md  coalpit.cabal
Coalpit/: Core.hs  DSV.hs  IO.hs  Parsing.hs
examples/: Basic.hs  Pipes.hs
test/: Test.hs
