name:                coalpit
version:             0.1.0.1
synopsis:            Command-line options parsing and printing
license:             BSD3
license-file:        LICENSE
author:              defanor
maintainer:          defanor@uberspace.net
category:            Console
build-type:          Simple
extra-source-files:  ChangeLog.md
                   , Example.hs
                   , README.md
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1, GHC == 8.0.2, GHC == 8.2.1

library
  exposed-modules:     Coalpit
  build-depends:       base >= 4.9 && < 5
                     , megaparsec >= 6.2 && < 7
  default-language:    Haskell2010
  ghc-options:         -Wall

test-suite test-coalpit
  default-language:    Haskell2010
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Test.hs
  build-depends:       base >= 4.9 && < 5
                     , generic-random >= 1 && < 2
                     , tasty >= 0.12 && < 1
                     , tasty-quickcheck >= 0.9 && < 1
                     , tasty-travis >= 0.2 && < 1
                     , coalpit
  ghc-options:         -Wall -Wno-unused-top-binds
